// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`large golden scorecard complete JSON and PR Markdown 1`] = `
{
  "pr_markdown": "- **Overall:** 98/100 (A)
- **Rubric:** 2026-08-07.1
- **Evidence coverage:** 8/8 (100%)

| Dimension | Weight | Score | Weighted points | Status |
| --- | ---: | ---: | ---: | --- |
| Goal quality | 15% | 100 | 15 | complete |
| Scouting quality | 10% | 85 | 8.5 | complete |
| Implementation quality | 30% | 100 | 30 | complete |
| Validation quality | 25% | 100 | 25 | complete |
| Goal attainment | 15% | 100 | 15 | complete |
| Evaluation quality | 5% | 90 | 4.5 | complete |

- **Elapsed:** 600s
- **Tokens:** 11000 total (8000 input, 2000 output, 1000 cache read, 0 cache write)
- **Strengths:** Goal quality (100); Scouting quality (85); Implementation quality (100)
- **Penalties:** None.
- **Warnings:** None.

<details><summary>Per-phase breakdown</summary>

| Phase | Outcome | Elapsed | Tokens | Metrics | Completeness | Confidence |
| --- | --- | ---: | ---: | --- | --- | ---: |
| Scouting | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |
| Analysis / goal setting | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |
| Coding | succeeded | unavailable | 11000 | retries=0 | complete | 100% |
| Validation | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |
| Goal check | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |
| Run evaluation | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |

</details>",
  "scorecard": {
    "completeness": "complete",
    "confidence": {
      "rationale": "8 of 8 evidence categories are available.",
      "score": 100,
    },
    "dimensions": [
      {
        "effective_weight": 0.15,
        "evidence": [],
        "id": "goal_quality",
        "normalized_score": 100,
        "rationale": "Score derived from available goal quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 100,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.15,
        "weighted_points": 15,
      },
      {
        "effective_weight": 0.1,
        "evidence": [],
        "id": "scouting_quality",
        "normalized_score": 85,
        "rationale": "Score derived from available scouting quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 85,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.1,
        "weighted_points": 8.5,
      },
      {
        "effective_weight": 0.3,
        "evidence": [],
        "id": "implementation_quality",
        "normalized_score": 100,
        "rationale": "Score derived from available implementation quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 100,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.3,
        "weighted_points": 30,
      },
      {
        "effective_weight": 0.25,
        "evidence": [],
        "id": "validation_quality",
        "normalized_score": 100,
        "rationale": "Score derived from available validation quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 100,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.25,
        "weighted_points": 25,
      },
      {
        "effective_weight": 0.15,
        "evidence": [],
        "id": "goal_attainment",
        "normalized_score": 100,
        "rationale": "Score derived from available goal attainment evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 100,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.15,
        "weighted_points": 15,
      },
      {
        "effective_weight": 0.05,
        "evidence": [],
        "id": "evaluation_quality",
        "normalized_score": 90,
        "rationale": "Score derived from available evaluation quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 90,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.05,
        "weighted_points": 4.5,
      },
    ],
    "ended_at": "2026-08-07T12:00:00.000Z",
    "evidence_coverage": {
      "available": 8,
      "missing_critical": [],
      "ratio": 1,
      "required": 8,
    },
    "grade": "A",
    "lifecycle_status": "completed",
    "overall_score": 98,
    "phases": {
      "coding": {
        "completeness": "complete",
        "confidence": 100,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "coding",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 1000,
          "cache_write_tokens": 0,
          "completeness": "complete",
          "input_tokens": 8000,
          "output_tokens": 2000,
          "unavailable": false,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "goal_check": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "goal_check",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "goal_setting": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "goal_setting",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "run_evaluation": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "run_evaluation",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "scouting": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "scouting",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "validation": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "validation",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
    },
    "rubric_version": "2026-08-07.1",
    "run_id": "synthetic-run",
    "schema_version": "1.0",
    "scored_at": "2026-08-07T12:00:00.000Z",
    "scoring_config": {
      "caps": {
        "missing_diff": 69,
        "missing_diff_and_validation": 49,
        "missing_validation": 59,
      },
      "dimension_weights": {
        "evaluation_quality": 0.05,
        "goal_attainment": 0.15,
        "goal_quality": 0.15,
        "implementation_quality": 0.3,
        "scouting_quality": 0.1,
        "validation_quality": 0.25,
      },
      "disabled_phase_policy": "reweight_eligible_dimensions",
      "enabled_phase_reliability_penalty_points": 0,
      "grade_bands": [
        {
          "grade": "A",
          "maximum_score": 100,
          "minimum_score": 90,
        },
        {
          "grade": "B",
          "maximum_score": 89,
          "minimum_score": 80,
        },
        {
          "grade": "C",
          "maximum_score": 79,
          "minimum_score": 70,
        },
        {
          "grade": "D",
          "maximum_score": 69,
          "minimum_score": 60,
        },
        {
          "grade": "F",
          "maximum_score": 59,
          "minimum_score": 0,
        },
      ],
      "normalization_rules": {
        "efficiency": {
          "expression": "min(100, target / actual * 100)",
          "function": "inverse_target_ratio",
          "parameters": {
            "retry_target": 2,
            "time_target_seconds": 7200,
            "token_target": 200000,
          },
        },
      },
      "rubric_version": "2026-08-07.1",
      "selected_targets": {
        "changed_lines": null,
        "rationale": "Configured before scoring; preserved with this artifact.",
        "token_budget": 200000,
        "wall_clock_ms": 7200000,
      },
      "task_size": "large",
    },
    "started_at": "2026-08-07T11:30:00.000Z",
    "timing_totals": {
      "completeness": "complete",
      "phase_duration_ms": {
        "coding": null,
        "goal_check": null,
        "goal_setting": null,
        "run_evaluation": null,
        "scouting": null,
        "validation": null,
      },
      "wall_clock_ms": 600000,
    },
    "token_totals": {
      "cache_read_tokens": 1000,
      "cache_write_tokens": 0,
      "completeness": "complete",
      "input_tokens": 8000,
      "output_tokens": 2000,
      "unavailable": false,
      "unknown_tokens": 0,
    },
    "warnings": [],
  },
}
`;

exports[`medium golden scorecard complete JSON and PR Markdown 1`] = `
{
  "pr_markdown": "- **Overall:** 98/100 (A)
- **Rubric:** 2026-08-07.1
- **Evidence coverage:** 8/8 (100%)

| Dimension | Weight | Score | Weighted points | Status |
| --- | ---: | ---: | ---: | --- |
| Goal quality | 15% | 100 | 15 | complete |
| Scouting quality | 10% | 85 | 8.5 | complete |
| Implementation quality | 30% | 100 | 30 | complete |
| Validation quality | 25% | 100 | 25 | complete |
| Goal attainment | 15% | 100 | 15 | complete |
| Evaluation quality | 5% | 90 | 4.5 | complete |

- **Elapsed:** 600s
- **Tokens:** 11000 total (8000 input, 2000 output, 1000 cache read, 0 cache write)
- **Strengths:** Goal quality (100); Scouting quality (85); Implementation quality (100)
- **Penalties:** None.
- **Warnings:** None.

<details><summary>Per-phase breakdown</summary>

| Phase | Outcome | Elapsed | Tokens | Metrics | Completeness | Confidence |
| --- | --- | ---: | ---: | --- | --- | ---: |
| Scouting | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |
| Analysis / goal setting | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |
| Coding | succeeded | unavailable | 11000 | retries=0 | complete | 100% |
| Validation | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |
| Goal check | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |
| Run evaluation | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |

</details>",
  "scorecard": {
    "completeness": "complete",
    "confidence": {
      "rationale": "8 of 8 evidence categories are available.",
      "score": 100,
    },
    "dimensions": [
      {
        "effective_weight": 0.15,
        "evidence": [],
        "id": "goal_quality",
        "normalized_score": 100,
        "rationale": "Score derived from available goal quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 100,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.15,
        "weighted_points": 15,
      },
      {
        "effective_weight": 0.1,
        "evidence": [],
        "id": "scouting_quality",
        "normalized_score": 85,
        "rationale": "Score derived from available scouting quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 85,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.1,
        "weighted_points": 8.5,
      },
      {
        "effective_weight": 0.3,
        "evidence": [],
        "id": "implementation_quality",
        "normalized_score": 100,
        "rationale": "Score derived from available implementation quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 100,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.3,
        "weighted_points": 30,
      },
      {
        "effective_weight": 0.25,
        "evidence": [],
        "id": "validation_quality",
        "normalized_score": 100,
        "rationale": "Score derived from available validation quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 100,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.25,
        "weighted_points": 25,
      },
      {
        "effective_weight": 0.15,
        "evidence": [],
        "id": "goal_attainment",
        "normalized_score": 100,
        "rationale": "Score derived from available goal attainment evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 100,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.15,
        "weighted_points": 15,
      },
      {
        "effective_weight": 0.05,
        "evidence": [],
        "id": "evaluation_quality",
        "normalized_score": 90,
        "rationale": "Score derived from available evaluation quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 90,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.05,
        "weighted_points": 4.5,
      },
    ],
    "ended_at": "2026-08-07T12:00:00.000Z",
    "evidence_coverage": {
      "available": 8,
      "missing_critical": [],
      "ratio": 1,
      "required": 8,
    },
    "grade": "A",
    "lifecycle_status": "completed",
    "overall_score": 98,
    "phases": {
      "coding": {
        "completeness": "complete",
        "confidence": 100,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "coding",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 1000,
          "cache_write_tokens": 0,
          "completeness": "complete",
          "input_tokens": 8000,
          "output_tokens": 2000,
          "unavailable": false,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "goal_check": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "goal_check",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "goal_setting": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "goal_setting",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "run_evaluation": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "run_evaluation",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "scouting": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "scouting",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "validation": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "validation",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
    },
    "rubric_version": "2026-08-07.1",
    "run_id": "synthetic-run",
    "schema_version": "1.0",
    "scored_at": "2026-08-07T12:00:00.000Z",
    "scoring_config": {
      "caps": {
        "missing_diff": 69,
        "missing_diff_and_validation": 49,
        "missing_validation": 59,
      },
      "dimension_weights": {
        "evaluation_quality": 0.05,
        "goal_attainment": 0.15,
        "goal_quality": 0.15,
        "implementation_quality": 0.3,
        "scouting_quality": 0.1,
        "validation_quality": 0.25,
      },
      "disabled_phase_policy": "reweight_eligible_dimensions",
      "enabled_phase_reliability_penalty_points": 0,
      "grade_bands": [
        {
          "grade": "A",
          "maximum_score": 100,
          "minimum_score": 90,
        },
        {
          "grade": "B",
          "maximum_score": 89,
          "minimum_score": 80,
        },
        {
          "grade": "C",
          "maximum_score": 79,
          "minimum_score": 70,
        },
        {
          "grade": "D",
          "maximum_score": 69,
          "minimum_score": 60,
        },
        {
          "grade": "F",
          "maximum_score": 59,
          "minimum_score": 0,
        },
      ],
      "normalization_rules": {
        "efficiency": {
          "expression": "min(100, target / actual * 100)",
          "function": "inverse_target_ratio",
          "parameters": {
            "retry_target": 2,
            "time_target_seconds": 2700,
            "token_target": 90000,
          },
        },
      },
      "rubric_version": "2026-08-07.1",
      "selected_targets": {
        "changed_lines": null,
        "rationale": "Configured before scoring; preserved with this artifact.",
        "token_budget": 90000,
        "wall_clock_ms": 2700000,
      },
      "task_size": "medium",
    },
    "started_at": "2026-08-07T11:30:00.000Z",
    "timing_totals": {
      "completeness": "complete",
      "phase_duration_ms": {
        "coding": null,
        "goal_check": null,
        "goal_setting": null,
        "run_evaluation": null,
        "scouting": null,
        "validation": null,
      },
      "wall_clock_ms": 600000,
    },
    "token_totals": {
      "cache_read_tokens": 1000,
      "cache_write_tokens": 0,
      "completeness": "complete",
      "input_tokens": 8000,
      "output_tokens": 2000,
      "unavailable": false,
      "unknown_tokens": 0,
    },
    "warnings": [],
  },
}
`;

exports[`small golden scorecard complete JSON and PR Markdown 1`] = `
{
  "pr_markdown": "- **Overall:** 98/100 (A)
- **Rubric:** 2026-08-07.1
- **Evidence coverage:** 8/8 (100%)

| Dimension | Weight | Score | Weighted points | Status |
| --- | ---: | ---: | ---: | --- |
| Goal quality | 15% | 100 | 15 | complete |
| Scouting quality | 10% | 85 | 8.5 | complete |
| Implementation quality | 30% | 100 | 30 | complete |
| Validation quality | 25% | 100 | 25 | complete |
| Goal attainment | 15% | 100 | 15 | complete |
| Evaluation quality | 5% | 90 | 4.5 | complete |

- **Elapsed:** 600s
- **Tokens:** 11000 total (8000 input, 2000 output, 1000 cache read, 0 cache write)
- **Strengths:** Goal quality (100); Scouting quality (85); Implementation quality (100)
- **Penalties:** None.
- **Warnings:** None.

<details><summary>Per-phase breakdown</summary>

| Phase | Outcome | Elapsed | Tokens | Metrics | Completeness | Confidence |
| --- | --- | ---: | ---: | --- | --- | ---: |
| Scouting | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |
| Analysis / goal setting | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |
| Coding | succeeded | unavailable | 11000 | retries=0 | complete | 100% |
| Validation | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |
| Goal check | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |
| Run evaluation | succeeded | unavailable | unavailable | retries=0 | provisional | 50% |

</details>",
  "scorecard": {
    "completeness": "complete",
    "confidence": {
      "rationale": "8 of 8 evidence categories are available.",
      "score": 100,
    },
    "dimensions": [
      {
        "effective_weight": 0.15,
        "evidence": [],
        "id": "goal_quality",
        "normalized_score": 100,
        "rationale": "Score derived from available goal quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 100,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.15,
        "weighted_points": 15,
      },
      {
        "effective_weight": 0.1,
        "evidence": [],
        "id": "scouting_quality",
        "normalized_score": 85,
        "rationale": "Score derived from available scouting quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 85,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.1,
        "weighted_points": 8.5,
      },
      {
        "effective_weight": 0.3,
        "evidence": [],
        "id": "implementation_quality",
        "normalized_score": 100,
        "rationale": "Score derived from available implementation quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 100,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.3,
        "weighted_points": 30,
      },
      {
        "effective_weight": 0.25,
        "evidence": [],
        "id": "validation_quality",
        "normalized_score": 100,
        "rationale": "Score derived from available validation quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 100,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.25,
        "weighted_points": 25,
      },
      {
        "effective_weight": 0.15,
        "evidence": [],
        "id": "goal_attainment",
        "normalized_score": 100,
        "rationale": "Score derived from available goal attainment evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 100,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.15,
        "weighted_points": 15,
      },
      {
        "effective_weight": 0.05,
        "evidence": [],
        "id": "evaluation_quality",
        "normalized_score": 90,
        "rationale": "Score derived from available evaluation quality evidence.",
        "raw_measurements": {
          "retries": 0,
          "source_score": 90,
          "tokens": 11000,
        },
        "status": "complete",
        "warnings": [],
        "weight": 0.05,
        "weighted_points": 4.5,
      },
    ],
    "ended_at": "2026-08-07T12:00:00.000Z",
    "evidence_coverage": {
      "available": 8,
      "missing_critical": [],
      "ratio": 1,
      "required": 8,
    },
    "grade": "A",
    "lifecycle_status": "completed",
    "overall_score": 98,
    "phases": {
      "coding": {
        "completeness": "complete",
        "confidence": 100,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "coding",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 1000,
          "cache_write_tokens": 0,
          "completeness": "complete",
          "input_tokens": 8000,
          "output_tokens": 2000,
          "unavailable": false,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "goal_check": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "goal_check",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "goal_setting": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "goal_setting",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "run_evaluation": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "run_evaluation",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "scouting": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "scouting",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
      "validation": {
        "completeness": "provisional",
        "confidence": 50,
        "duration_ms": null,
        "enabled": true,
        "ended_at": null,
        "evidence": [],
        "measurements": {
          "retries": 0,
        },
        "outcome": "succeeded",
        "phase": "validation",
        "started_at": null,
        "token_usage": {
          "cache_read_tokens": 0,
          "cache_write_tokens": 0,
          "completeness": "unavailable",
          "input_tokens": 0,
          "output_tokens": 0,
          "unavailable": true,
          "unknown_tokens": 0,
        },
        "warnings": [],
      },
    },
    "rubric_version": "2026-08-07.1",
    "run_id": "synthetic-run",
    "schema_version": "1.0",
    "scored_at": "2026-08-07T12:00:00.000Z",
    "scoring_config": {
      "caps": {
        "missing_diff": 69,
        "missing_diff_and_validation": 49,
        "missing_validation": 59,
      },
      "dimension_weights": {
        "evaluation_quality": 0.05,
        "goal_attainment": 0.15,
        "goal_quality": 0.15,
        "implementation_quality": 0.3,
        "scouting_quality": 0.1,
        "validation_quality": 0.25,
      },
      "disabled_phase_policy": "reweight_eligible_dimensions",
      "enabled_phase_reliability_penalty_points": 0,
      "grade_bands": [
        {
          "grade": "A",
          "maximum_score": 100,
          "minimum_score": 90,
        },
        {
          "grade": "B",
          "maximum_score": 89,
          "minimum_score": 80,
        },
        {
          "grade": "C",
          "maximum_score": 79,
          "minimum_score": 70,
        },
        {
          "grade": "D",
          "maximum_score": 69,
          "minimum_score": 60,
        },
        {
          "grade": "F",
          "maximum_score": 59,
          "minimum_score": 0,
        },
      ],
      "normalization_rules": {
        "efficiency": {
          "expression": "min(100, target / actual * 100)",
          "function": "inverse_target_ratio",
          "parameters": {
            "retry_target": 2,
            "time_target_seconds": 900,
            "token_target": 30000,
          },
        },
      },
      "rubric_version": "2026-08-07.1",
      "selected_targets": {
        "changed_lines": null,
        "rationale": "Configured before scoring; preserved with this artifact.",
        "token_budget": 30000,
        "wall_clock_ms": 900000,
      },
      "task_size": "small",
    },
    "started_at": "2026-08-07T11:30:00.000Z",
    "timing_totals": {
      "completeness": "complete",
      "phase_duration_ms": {
        "coding": null,
        "goal_check": null,
        "goal_setting": null,
        "run_evaluation": null,
        "scouting": null,
        "validation": null,
      },
      "wall_clock_ms": 600000,
    },
    "token_totals": {
      "cache_read_tokens": 1000,
      "cache_write_tokens": 0,
      "completeness": "complete",
      "input_tokens": 8000,
      "output_tokens": 2000,
      "unavailable": false,
      "unknown_tokens": 0,
    },
    "warnings": [],
  },
}
`;
